# INF3995

./: .gitmodules  presentationOrale.pptx
project/server/src/: CMakeLists.txt  main.cpp
project/server/src/cmake/: FilesToCompileFunctions.cmake  SetupTestFunctions.cmake
project/server/src/common/: CMakeLists.txt  FilesToCompile.cmake  FilesToGenerate.cmake  README.md
project/server/src/common/args/: RestServerArgsParser.cpp  RestServerArgsParser.hpp
project/server/src/common/config/: Config.hpp.in
project/server/src/common/database/: Database.cpp  Database.hpp  Query.cpp  Query.hpp  Song.hpp  Statement.cpp  Statement.hpp  User.hpp  sqlite_error.cpp  sqlite_error.hpp  thread_safe_sqlite.hpp
project/server/src/common/database/templates/: Song.hpp  User.hpp
project/server/src/common/filesystem/: FileCache.cpp  FileCache.hpp
project/server/src/common/logger/: Logger.cpp  Logger.hpp
project/server/src/common/misc/: Base64.hpp  Statistics.cpp  Statistics.hpp  id_utils.cpp  id_utils.hpp
project/server/src/common/mp3/communication/: Mp3EventClientSocket.cpp  Mp3EventClientSocket.hpp  Mp3EventListenerSocket.cpp  Mp3EventListenerSocket.hpp  Mp3EventSocket.cpp  Mp3EventSocket.hpp
project/server/src/common/mp3/definitions/: Volume.hpp
project/server/src/common/mp3/event/: AbstractMp3EventVisitor.hpp  AbstractPayloadlessEvent.cpp  AbstractPayloadlessEvent.hpp  Mp3Event.cpp  Mp3Event.hpp  Mp3EventClientSocket.cpp  Mp3EventClientSocket.hpp  Mp3EventListenerSocket.hpp  Mp3EventSocket.hpp  Mp3EventVisitor.hpp  MuteEvent.cpp  MuteEvent.hpp  StopSongEvent.cpp  StopSongEvent.hpp  UnmuteEvent.cpp  UnmuteEvent.hpp  VolumeChangeEvent.cpp  VolumeChangeEvent.hpp  VolumeGetRequest.cpp  VolumeGetRequest.hpp  VolumeGetResponse.cpp  VolumeGetResponse.hpp
project/server/src/common/mp3/header/: Mp3Duration.cpp  Mp3Duration.hpp  Mp3Header.cpp  Mp3Header.hpp
project/server/src/common/mp3/player/: Mp3AutoPlayer.cpp  Mp3AutoPlayer.hpp  Mp3Player.cpp  Mp3Player.hpp
project/server/src/common/os/: ClientSocket.cpp  ClientSocket.hpp  ListenerSocket.cpp  ListenerSocket.hpp  Socket.cpp  Socket.hpp  TestSocket.cpp  TestSocket.hpp
project/server/src/common/os/exception/: SocketClosedException.cpp  SocketClosedException.hpp
project/server/src/common/os/signal/: SignalHandling.cpp  SignalHandling.hpp
project/server/src/common/rest/: rest_utils.cpp  rest_utils.hpp
project/server/src/common/src/: common.hpp.in
project/server/src/common/test/: CMakeLists.txt  FilesToCompile.cmake  FilesToGenerate.cmake  secureRestApiTestScript.sh
project/server/src/common/test/api-tests/: READMEYOUFOOL.md  all.sh  test_blacklist.py  test_deletechanson.py  test_userapi.py
project/server/src/common/test/database/: Testsqlite_error.cpp  (+1 more)
project/server/src/database/: Database.cpp  Database.hpp
project/server/src/elevation-player/: ArgsParser.cpp  ArgsParser.hpp  CMakeLists.txt  FilesToCompile.cmake  main.cpp
project/server/src/elevation-player/event/: EventManager.cpp  EventManager.hpp
project/server/src/elevation-player/mp3/: Mp3AutoPlayerCallbacks.cpp  Mp3AutoPlayerCallbacks.hpp
project/server/src/elevation-player/test/: CMakeLists.txt  FilesToCompile.cmake  TestElevationPlayerArgsParser.cpp
project/server/src/http/: RequestHandler.cpp  RequestHandler.hpp
project/server/src/http-server/: .gitmodules  CMakeLists.txt  FilesToCompile.cmake  README.md  main.cpp
project/server/src/http-server/database/: Database.cpp  Database.hpp  User.hpp
project/server/src/http-server/filesystem/: FileCache.cpp  FileCache.hpp
project/server/src/http-server/http/: RestApi.cpp  RestApi.hpp  RestApiUtils.cpp  RestApiUtils.hpp
project/server/src/http-server/misc/: Base64.hpp
project/server/src/http-server/mp3/: Mp3AutoPlayerCallbacks.cpp
project/server/src/http-server/mp3-header/: Mp3Duration.cpp  Mp3Duration.hpp  Mp3Header.cpp  Mp3Header.hpp
project/server/src/http-server/os/: SharedFileMemory.cpp  SharedFileMemory.hpp  SharedMemory.cpp  SharedMemory.hpp
project/server/src/http-server/test/: CMakeLists.txt  FilesToCompile.cmake  FilesToGenerate.cmake  Mp3HeaderTest.cpp
project/server/src/https-server/: Admin.cpp  Admin.hpp  CMakeLists.txt  FilesToCompile.cmake  README.md  main.cpp
project/server/src/https-server/database/: Database.cpp
project/server/src/https-server/https/: Admin.hpp  SecureRestApi.cpp  SecureRestApi.hpp  apiDescription.cpp  auth.cpp  blacklist.cpp  fileManagement.cpp  statistics.cpp  volume.cpp
project/server/src/ssl-daemon/: ArgsParser.cpp  ArgsParser.hpp  CMakeLists.txt  FilesToCompile.cmake  FilesToGenerate.cmake  README.md  main.cpp
project/server/src/ssl-daemon/communication/: ClientSocket.cpp  ClientSocket.hpp  IpSocket.cpp  IpSocket.hpp  ListenerSocket.cpp  ListenerSocket.hpp  LocalSocket.cpp  LocalSocket.hpp  Socket.cpp  Socket.hpp  SocketClosedException.cpp  SocketClosedException.hpp
project/server/src/ssl-daemon/config/: Config.hpp.in
project/server/src/ssl-daemon/core/: DaemonManager.cpp  DaemonManager.hpp  DaemonMaster.cpp  DaemonMaster.hpp  DaemonRunner.cpp  DaemonRunner.hpp
project/server/src/ssl-daemon/packet/: HttpPacketReader.cpp  HttpPacketReader.hpp
project/server/src/ssl-daemon/signal/: SignalHandling.cpp  SignalHandling.hpp
project/server/src/ssl-daemon/ssl/: SslContext.cpp  SslContext.hpp  SslSession.cpp  SslSession.hpp
project/server/src/ssl-daemon/test/: CMakeLists.txt  FilesToCompile.cmake  IntegrationTests.cpp  TestArgsParser.cpp
project/server/src/test-resources/: CMakeLists.txt  FilesToGenerate.cmake  README.md
project/server/src/test-resources/database/: testStruct.sql
project/server/src/testtools/: BlacklistTests.py  READMEYOUFOOL.md  restapi_deleteChanson.py  restapi_getFile.py  restapi_getUsagerIdentification.py  restapi_json.py  restapi_sanity.py  restapitest.py
tp/tp3/src/: CMakeLists.txt  ErrorEvent.cpp  ErrorEvent.hpp  HelloHandler.cpp  HelloHandler.hpp  LogEvent.cpp  LogEvent.hpp  Logger.cpp  Logger.hpp  PrintHandler.cpp  PrintHandler.hpp  PrintQueue.cpp  PrintQueue.hpp  RequestEvent.cpp  RequestEvent.hpp  main.cpp
(+393 files in other folders)
